# fantasy_chess

./: .rustfmt.toml  Cargo.toml
db/: create_database.sql
src/: analysis.rs  api.rs  chess_com.rs  db.rs  dumbchess.rs  lib.rs  main.rs  pgn.rs
src/testdata/: game_response.json  games_for_player.json  player_response.json
