[package]
authors = ["Scott Minor <minor@minorhacks.com>"]
edition = "2018"
name = "fantasy_chess"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2"
futures = "0.3"
itertools = "0.10"
lazy_static = "1"
maplit = "1"
reqwest = "0.11"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = { version = "0.5", features = ["any", "runtime-tokio-rustls", "mysql", "sqlite"] }
thiserror = "1"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
uuid = {version = "0.8", features = ["v4"]}
